--- a/inst/exercises/chemistry/equilibriumOMD/equilibriumOMD.Rmd
+++ b/inst/exercises/chemistry/equilibriumOMD/equilibriumOMD.Rmd
@@ -1,7 +1,7 @@
 ---
 title: |
   | Local Equilibrium Chemistry in R --- part III:
-  | Mixed Equilibrium-Irreversible Reactions
+  | Four Equilibrium Reactions
 subtitle: "Exercises Accompanying the Course Reaction Transport Modelling in the Hydrosphere"
 author: "Karline Soetaert and Lubos Polerecky, Utrecht University"
 date: "February 2021"
@@ -9,6 +9,7 @@ output:
   pdf_document:
     number_sections: true
   html_document: default
+linestretch: 1.15
 ---
 
 ```{r child = 'equilibriumOMD_Q.Rmd'}
