--- a/inst/tutorials/04massbalance/massbalance.Rmd
+++ b/inst/tutorials/04massbalance/massbalance.Rmd
@@ -136,8 +136,8 @@ msg <- "F12, the sinking of detritus, is expressed in $mol~N/m^2/day$ (you will 
 question("Which of the following differential equations correctly describe mass balances for the DETRITUS state variable?", type = "learnr_checkbox",
  answer("$\\frac{d[DETRITUS]}{dt} = F3 + F6 - F5 + F7 + F8 - F9 - F12$", correct=FALSE),
  answer("$\\frac{d[DETRITUS]}{dt} = F3 + F6 - F5 + F7 + F8 - F9 - F12\\cdot h$", correct=FALSE),
- answer("$\\frac{d[DETRITUS]}{dt} = F3 + F6 - F5 + F7 + F8 - F9 - F12/h$", correct=TRUE),
- 
+ answer("$\\frac{d[DETRITUS]}{dt} = F3 + F6 + F7 + F8 - F9 - F12/h$", correct=TRUE),
+ answer("$\\frac{d[DETRITUS]}{dt} = F3 + F6 - F5 + F7 + F8 - F9 - F12/h$", correct=FALSE),
  incorrect=msg, 
  correct=msg)
 ```
