--- a/inst/tutorials/10partitioning/partitioning.Rmd
+++ b/inst/tutorials/10partitioning/partitioning.Rmd
@@ -50,6 +50,7 @@ question(sprintf("What is the meaning and unit of the rate constant $k_p$?"),
  answer(sprintf("$k_p$ is the precipitation rate constant, in $m~yr^{-1}$"), correct=TRUE),
  answer(sprintf("$k_p$ is the dissolution rate constant, in $mol~m^{-2}~yr^{-1}$")),
  
+ allow_retry = TRUE,
  incorrect=msg,
  correct=msg)
 ```
@@ -63,6 +64,7 @@ question(sprintf("What is the meaning and unit of $V$ in the above equation?"),
          answer(sprintf("$V$ is the *total* volume of the silica particles, in $m^{3}$, calculated from the radius of the individual particle as $V=N\\cdot \\frac{4}{3}\\pi r^3$.")),
          answer(sprintf("$V$ is the volume of well-mixed water containing the silica particles, in $m^3$."), correct=TRUE),
  
+ allow_retry = TRUE,
  incorrect=msg,
  correct=msg)
 ```
@@ -75,18 +77,21 @@ question(sprintf("What is the meaning and unit of $A$ in the above equation?"),
          answer(sprintf("$A$ is the area of an *individual* silica particle, in $m^{2}$, calculated from the radius of the individual particle as $A=4\\pi r^2$.")),
          answer(sprintf("$A$ is the *total* area of all silica particles, in $m^{2}$, calculated from the radius of the individual particle as $A=N\\cdot 4\\pi r^2$."), correct=TRUE),
 
+ allow_retry = TRUE,
  incorrect=msg,
  correct=msg)
 ```
 
 ```{r eq_conc, echo=FALSE}
-msg <- sprintf("The answer is $k_d/k_p$. Tip: if you do not remember whether the formula should be $k_p/k_d$ or $k_d/k_p$, think about the units. Concentrations are in $mol~m^{-3}$, and this unit is obtained with $k_d/k_p$, not with $k_p/k_d$. Note that there are *two* correct answers in the list! Also note that $M$ (molar) stands for $mol~L^{-1}$.")
+msg <- sprintf("The answer is $k_d/k_p$. Tip: if you do not remember whether the formula should be $k_p/k_d$ or $k_d/k_p$, think about the units. Concentrations are in $mol~m^{-3}$, and this unit is obtained with $k_d/k_p$, not with $k_p/k_d$.")
 
-question(sprintf("Assume that the rate constant describing the dissolution of a mineral in water is $k_d = 2\\,mol\\,m^{-2}\\,yr^{-1}$, and the rate constant describing the precipitation of that mineral is $k_p = 5\\,m\\,yr^{-1}$. What is the equilibrium concentration of the dissolved mineral in water?"), type = "learnr_checkbox",
+question(sprintf("Assume that the rate constant describing the dissolution of a mineral in water is $k_d = 2\\,mol\\,m^{-2}\\,yr^{-1}$, and the rate constant describing the precipitation of that mineral is $k_p = 5\\,m\\,yr^{-1}$. What is the equilibrium concentration of the dissolved mineral in water? Note that there are *two* correct answers in the list! Also note that $M$ (molar) stands for $mol~L^{-1}$."), type = "learnr_checkbox",
  answer(sprintf("0.4 $mol\\,m^{-3}$"), correct=TRUE),
  answer(sprintf("2.5 $mol\\,m^{-3}$")),
- answer(sprintf("1 $mol\\,m^{-3}$")),
  answer(sprintf("10 $mol\\,m^{-3}$")),
+ answer(sprintf("40 $\\mu mol\\,L^{-1}$")),
+ answer(sprintf("2.5 $mmol\\,L^{-1}$")),
+ answer(sprintf("10 $mM$")),
  answer(sprintf("400 $\\mu M$"), correct=TRUE),
  
  allow_retry = TRUE,
@@ -97,7 +102,13 @@ question(sprintf("Assume that the rate constant describing the dissolution of a 
 
 ## Mineral dissolution - exercise
 
-There are $N=800$ spherical amorphous silica particles suspended in a well-mixed water volume of $V=1~L$. Initially, the concentration of the dissolved silica (silicic acid) in the water is $Si_{ini} = 100~\mu M$, and all particles have the same *diameter* $D_{ini}=0.1~mm$. Assume the rate constant for silica dissolution of $k_d = 1~mol~m^{-2}~yr^{-1}$ and for silica precipitation of $k_p = 0.8~m~yr^{-1}$. Bulk silica density is $2200~kg~m^{-3}$, molar weight of silica is $60~g~mol^{-1}$.
+Consider $N=800$ spherical amorphous silica particles suspended in a well-mixed water volume of $V=1~L$. Assume that
+
+- initially, the concentration of the dissolved silica (silicic acid) in the water is $Si_{ini} = 100~\mu M$;
+- all particles have the same *diameter* $D_{ini}=0.1~mm$;
+- rate constant for silica dissolution is $k_d = 1~mol~m^{-2}~yr^{-1}$;
+- rate constant for silica precipitation is $k_p = 0.8~m~yr^{-1}$;
+- bulk silica density is $2200~kg~m^{-3}$, molar weight of silica is $60~g~mol^{-1}$.
 
 ```{r dSidt_pars, echo=FALSE}
 N    <- 800    # number of particles, -
@@ -112,6 +123,8 @@ dSi.ini.dt <- -kp * N * 4*pi*(Dini/2)^2 / V * (Cini - kd/kp)
 ```
 
 ```{r dSidt_ini, echo=FALSE}
+msg <- sprintf("Tips: 1. Use the formula for the rate of change in dissolved Si concentration, as explained earlier in this tutorial. 2. Calculate the total surface area of the silica particles (note that the *diameter*, not the *radius*, of the silica particles is provided). 3. Calculate the equilibrium concentration of dissolved Si based on the rate constants of the forward and backward processes. 4. Convert *all* quantities into SI units. In this way, you will be less likely to make an error in the final calculation step. That is, use moles, meters (and their powers), years (although seconds are the SI units for time, using years is ok in this exercise). 5. Carry out the calculation on your calculator or in R. Note that the information about the density and molar weight of silica is irrelevant in this exercise.")
+
 question("What is the *initial* rate of increase in the silicic acid concentration (dSi/dt) in the water with the silica particles?", 
          type = "learnr_radio",
          answer(sprintf("23 $mmol~L^{-1}~yr^{-1}$")),
@@ -123,9 +136,9 @@ question("What is the *initial* rate of increase in the silicic acid concentrati
          answer(sprintf("69 $mol~m^{-3}~yr^{-1}$")),
          answer(sprintf("92 $\\mu mol~L^{-1}~yr^{-1}$")),
          
-         allow_retry = TRUE,
- incorrect = sprintf("If you think you are using the correct formula, double check that you did not make an error during units conversion. It is recommended that you convert *all* quantities into SI units *before* calculating the final value. Note that the information about the density and molar weight of silica is irrelevant in this exercise. Also note that the *diameter*, not the *radius*, of the silica particles is provided. There are *two* correct answers!"),
- correct = sprintf("Bingo!")
+ allow_retry = TRUE,
+ incorrect = msg,
+ correct = msg
 )
 ```
 
@@ -144,7 +157,7 @@ question("Which statement is true?", type = "learnr_radio",
 ## Air-water exchange - quiz
 
 ```{r statements2, echo=FALSE}
-msg <- sprintf("The correct value is calculated as $k_p/h\\cdot (O_{2,eq} - 0)$.")
+msg <- sprintf("Tips: 1. $O_2$ concentration in the water column increases due to net dissolution of $O_2$ across the air-water interface. 2. The area of this interface is $A$, the volume of the water column is $V=A\\cdot h$. 3. The term $A/V$ in the equation for $dO_2/dt$ is therefore equal to $1/h$. 4. The rate is therefore calculated according to $k_p/h\\cdot (O_{2,eq} - 0)$. 5. Make sure that you convert all quantities to SI units before doing the final calculation.")
 
 question(sprintf("A well-mixed *anoxic* water column is in contact with the atmosphere. What is the initial rate of increase in the $O_2$ concentration in the water? Piston velocity is $k_p = 1\\,m\\,d^{-1}$, $O_2$ solubility in the water is $300\\,\\mu mol\\,L^{-1}$, water column height is $h=50\\,cm$."), type = "learnr_radio",
  answer(sprintf("$300\\, \\mu mol\\,L^{-1}\\,d^{-1}$")),
@@ -159,7 +172,18 @@ question(sprintf("A well-mixed *anoxic* water column is in contact with the atmo
 
 ## Air-water exchange - exercise
 
-You plan to install in your garden a pond with goldfish. By swimming in the pond, the fish will mix the water in the pond, and by respiration they will decrease the dissolved $O_2$ concentration in the pond. This decrease in dissolved $O_2$ will be compensated by air-water exchange. Assume that goldfish respiration is unaffected if the dissolved $O_2$ concentration does not decrease below 80% of the air saturated value. Additionally assume the piston velocity of $k_p=1~m~d^{-1}$, the area of the pond of $4~m^2$, the average height of the water column of $1~m$, Henry’s constant for dissolved $O_2$ of $K_H=770~L~Atm~mol^{-1}$, molar fraction of $O_2$ in the atmosphere of 21%, the total atmospheric pressure of $1~Atm$, and the average goldfish respiration rate of $400~\mu mol~O_2~fish^{-1}~d^{-1}$.
+You plan to install in your garden a pond with goldfish. By swimming in the pond, the fish will mix the water in the pond, and by respiration they will decrease the dissolved $O_2$ concentration in the pond. This decrease in dissolved $O_2$ will be compensated by air-water exchange. 
+
+Assume that 
+
+- goldfish respiration is unaffected (fish are 'happy') if the dissolved $O_2$ concentration does not decrease below 80% of the air saturated value;
+- piston velocity is $k_p=1~m~d^{-1}$;
+- area of the pond is $4~m^2$;
+- the average height of the water column is $1~m$;
+- Henry’s constant for dissolved $O_2$ is $K_H=770~L~Atm~mol^{-1}$;
+- molar fraction of $O_2$ in the atmosphere is 21%;
+- the total atmospheric pressure is $1~Atm$;
+- the average respiration rate per individual goldfish is $400~\mu mol~O_2~ind^{-1}~d^{-1}$.
 
 ```{r Fish-setup, echo=FALSE, eval=FALSE}
 pSat  <- 0.8    # -
@@ -180,7 +204,9 @@ N           <- airwaterTot/Resp
 ```
 
 ```{r Nfish, echo=FALSE}
-question("What is the maximum number of goldfish you can have in the pond so that their respiration will not be affected by the decreased $O_2$ concentrations in the pond? ", 
+msg <- sprintf("Tips: 1. $O_2$ concentration in the pond changes due to two competing processes: (a) net dissolution of atmospheric $O_2$, and (b) $O_2$ removal due to fish respiration. 2. The answer to the question is found by considering that the system reaches an *equilibrium*, i.e., $O_2$ concentration in the pond remains *constant* and equal to 80%s of the equilibrium value. 3. Use your knowledge of physical chemistry (Henry's law) to quantify the equilibrium $O_2$ concentration (also called $O_2$ solubility) at the given partial pressure of $O_2$ in the atmosphere. (Note that the unit of Henry's constant provides some clues on how to do this.) 4. Use the formula explained earlier in this tutorial to quantify the net rate of $O_2$ dissolution across the air-water interface for the given $O_2$ concentration in the water. 5. Convert this value to the rate of $O_2$ dissolution *per pond* per day. 6. Next, calculate the removal of $O_2$ in the pond due to fish respiration, based on the respiration rate of an individual fish. 7. Combine everything based on equation you derived in point 2. This will yield an equation from which you can find the number of fish in the pond. Make sure you use SI units for all quantities when carrying out the last calculation steps. This will make it less likely that you will make a calculation error.", "%")
+
+question("What is the maximum number of 'happy' goldfish in the pond? ", 
          type = "learnr_radio",
          answer("25 fish"), 
          answer("545 fish", correct=TRUE), 
@@ -188,9 +214,9 @@ question("What is the maximum number of goldfish you can have in the pond so tha
          answer("1090 fish"),
          answer("100 fish"),
 
-         allow_retry = TRUE,
- incorrect = sprintf("Incorrect answer. If you think your formula is correct, double check that you have not made a mistake during units conversion. If you cannot come up with the formula, consider the following hints: (1) At the minimal $O_2$ concentration where the fish respiration is still not affected, the aeration and respiration rates should be equal to each other. (2) Use your knowledge of physical chemistry (Henry's law) to quantify the $O_2$ solubility at the given partial pressure of $O_2$ in the atmosphere. (3) Estimate the total air-water exchange (amount of $O_2$ added to the pond per day, $mol\\,O_2\\,d^{-1}$) at the minimal $O_2$ concentration. (4) You know the respiration rate for one fish, so you can easily calculate the total respiration rate by all fish in the pond."),
- correct = sprintf("Bingo!")
+ allow_retry = TRUE,
+ incorrect = msg,
+ correct = msg
 )
 ```
 
@@ -199,7 +225,7 @@ And one extra question:
 ```{r Fish_point_height, echo=FALSE}
 msg <- "It may be somewhat counter-intuitive, but the answer is 'no'. This is because the air-water exchange rate - in terms of the *amount* of $O_2$ exchanged per unit time $(mol\\,O_2\\,d^{-1})$ - is proportional to the *area* of the air-water interface through which the exchange occurs (as long as the water column is well-mixed)."
   
-question("Does the maximum number of goldfish in the pond depend on the height of the water column?", type = "learnr_radio",
+question("Does the maximum number of goldfish in the pond depend on the height of the water column, assuming that the surface area of the pond remains the same?", type = "learnr_radio",
  answer("Yes"),
  answer("No", correct=TRUE),
  
